added an appendix section

--- a/docs/README.ipynb
+++ b/docs/README.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "## A Crash Introduction to Python\n",
     "\n",
-    "Structure of a python file, data types, importing packages, Objects, functions, classes, indexing lists and arrays, slicing arrays. Start to introduce the core packages that you will always use, so numpy and its specific data types. \n",
+    "Structure of a python file, data types, importing packages, functions, indexing, slicing arrays/lists. Start to introduce the core packages that you will always use, so numpy and its specific data types. \n",
     "\n",
     "Maybe a short piece on how to google something you want to do, finding a relevant python package, installing that package and making sense of a packages wiki page in order to use it. \n",
     "\n",
@@ -71,7 +71,13 @@
     "\n",
     "## A quick start in the debugging procedure\n",
     "\n",
-    "Not sure about this section but I have a small idea brewing on showing a brief overview on how to get started with debugging."
+    "Not sure about this section but I have a small idea brewing on showing a brief overview on how to get started with debugging.\n",
+    "\n",
+    "\n",
+    "## Appendix / Optional Extras\n",
+    "\n",
+    "Could go into further detail with functions and classes, possibly even on application structure. \n",
+    "\n"
    ]
   },
   {
