Small Bit of progress
Should finish a couple notebooks this weekend however

--- a/PyPlottingASK/2_PythonCrashIntroduction/Python_Introduction.ipynb
+++ b/PyPlottingASK/2_PythonCrashIntroduction/Python_Introduction.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "int"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,6 +209,8 @@
     "\n",
     "# Variable types\n",
     "\n",
+    "Every variable assignment has a type association, this will limit what you can do with each variable. \n",
+    "\n",
     "## Numbers \n",
     "\n",
     "Numbers can be allocated to memory in three possible variable types, either as a **integer**, **float** or a **complex** variable. \n",
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -333,73 +335,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Booleans \n",
-    "\n",
-    "A boolean is an object that has only two states, `True` or `False`. Refered to a `bool` in Python. You can either use the object `True` or integer `1`, similarly `False` is equivelent to `0`. \n",
-    "\n",
-    "Below is a quick test of that fact, you can see `True` is type bool and `1` is type int, but getting Python to decide if they're equivelent using the bitwise operator equal to `==` prints `True`. This means they are equiverelent. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'bool'>\n",
-      "<class 'int'>\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(True))\n",
-    "print(type(1))\n",
-    "\n",
-    "print( True == 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What is interesting is this is actually how all computers comunicate, in ones and zeros, binary. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Lists \n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Indexing and slicing\n",
-    "\n",
-    "## Tuples\n",
-    "\n",
-    "### Indexing\n",
-    "\n",
-    "## Dictionaries\n",
-    "\n",
-    "### Indexing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Arithmetic Operators\n",
     "\n",
-    "\n",
+    "Python has built in operators, some shown below, these can be used to operate on many of the variables in python. \n",
     "\n",
     "</p>\n",
     "<table>\n",
@@ -442,15 +380,59 @@
     "<td><code>1</code></td>\n",
     "</tr>\n",
     "</tbody>\n",
-    "</table>"
+    "</table>\n",
+    "\n",
+    "What's worth keeping in mind is opertaing on the two most common number types, what will happen if you divide two integers? You can add together strings. It's important to just keep this in mind. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bitwise Operators \n",
+    "## Booleans \n",
     "\n",
+    "A boolean is an object that has only two states, `True` or `False`. Refered to a `bool` in Python. You can either use the object `True` or integer `1`, similarly `False` is equivelent to `0`. \n",
+    "\n",
+    "Below is a quick test of that fact, you can see `True` is type bool and `1` is type int, but getting Python to decide if they're equivelent using the bitwise operator equal to `==` prints `True`. This means they are equiverelent. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "<class 'int'>\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(True))\n",
+    "print(type(1))\n",
+    "\n",
+    "print( True == 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is interesting is this is actually how all computers comunicate, in ones and zeros, binary.\n",
+    "\n",
+    "## Bitwise Operators\n",
+    "\n",
+    "Operating on booleans is a core concept which you will use for logic based programming, in if statements and more. Here is a table of some boolean operators. They can be used "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "</p>\n",
     "<table>\n",
     "<thead>\n",
@@ -493,6 +475,67 @@
     "</tr>\n",
     "</tbody>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lists \n",
+    "\n",
+    "Lists are a python object that store multiple variables in an indexed list. You may store variables of different types in a list however, it is often best practice to keep all variables in a list the same type. Especially when we get onto manipulating and plotting data.\n",
+    "\n",
+    "Below is an example of assigning a list to a variable name, the convention is to use square brackets to designate a list and then seperate each item by a comma. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "MyList = [1,2,3,4,5,6]\n",
+    "\n",
+    "print(MyList)\n",
+    "print(type(MyList))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lists can be operated on"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexing and slicing\n",
+    "\n",
+    "## Tuples\n",
+    "\n",
+    "### Indexing\n",
+    "\n",
+    "## Dictionaries\n",
+    "\n",
+    "### Indexing"
    ]
   },
   {
