Little progress after work

--- a/PyPlottingASK/2_PythonCrashIntroduction/Python_Introduction.ipynb
+++ b/PyPlottingASK/2_PythonCrashIntroduction/Python_Introduction.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Python Introduction \n",
     "\n",
+    "In this notebook I'll give you a quick introduction into python and how to do some basic operations. \n",
+    "\n",
     "Python was first developed in the late 1980s by Guido van Rossum, a Dutch programmer who was\n",
     "also a fan of the BBC's rather silly TV programme Monty Python's Flying Circus. It is one the most\n",
     "popular coding languages in the world and has wide-ranging applications from data science to\n",
@@ -705,9 +707,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Functions\n",
+    "# Functions\n",
     "\n",
-    "<p>Here are some \"mathsy\" functions that we might use from the Python standard library</p>\n",
+    "Python functions can be either built in functions such as `print()`, imported functions for other modules such as `numpy.sqrt()` or your own defined functions. \n",
+    "\n",
+    "The usual convention to use them is `output = function(input1,input2)`, where you call the function by its name followed by circular brackets surrounding the single or multiple inputs. \n",
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<p>Here are some \"mathsy\" functions that are from the Python standard library</p>\n",
     "<table>\n",
     "<thead>\n",
     "<tr>\n",
@@ -797,6 +810,62 @@
    ],
    "source": [
     "print(sum(MyList))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coding your own functions\n",
+    "\n",
+    "So far we have talked about running your code in a linear fashion, assigning variables, using operators and functions written in modules by other people. Now when it comes to analysing data from an experiment or if you're writing a piece of software you'll defiantly want to write your own function now and again. \n",
+    "\n",
+    "Writing your own functions has the added benefits of reducing the amount of repeated code in your programs, especially helpful when you want to repeat a method many times and by repeatedly using a single function you are limiting the chances of a bug appearing in your code, or at least a bug will be easier to find! \n",
+    "\n",
+    "So where to start, define your function name and its input variables, `def myFunc(a,b):` then start writing your code utilising the input variables `a` and `b`, and usually you will want to `return` a value or object to the main code once it's done, using the `return` statement. \n",
+    "\n",
+    "Here's an example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myFunc(a,b):\n",
+    "    c = a*b + 10\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you've ran the above code cell then your function effectively is saved as a object, available to be called in other parts of your code. \n",
+    "\n",
+    "for example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "myVar = myFunc(1,23)\n",
+    "\n",
+    "print(myVar)\n",
+    "print(type(myVar))"
    ]
   },
   {
@@ -82399,20 +82468,6 @@
     "\n",
     "print(numpyList)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Worth explaining Numpy arrays???"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
